fixed sidebar length

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -4,6 +4,9 @@
 body {
   font-family: 'Rubik', sans-serif;
 }
+main > div {
+  min-height: 100vh;
+}
 
 .github-component {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
